making progress on end to end example.

--- a/function_calling_first_priniciples.ipynb
+++ b/function_calling_first_priniciples.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -128,35 +128,27 @@
      "text": [
       " Here is a summary of what I know about JSON schema:\n",
       "\n",
-      "- JSON schema is a specification for defining the structure and validation constraints of JSON data. It provides a declarative way to specify requirements for JSON documents.\n",
+      "- JSON schema is a vocabulary that allows you to annotate and validate JSON documents. It defines a JSON-based format to describe the structure of JSON data.\n",
       "\n",
-      "- The main purposes of JSON schema are to validate JSON data based on a predefined schema, provide auto-generated documentation, and assist in rapid development by providing auto-completion in code editors.\n",
+      "- JSON schemas are JSON documents themselves that describe JSON data using validation keywords like \"type\", \"properties\", \"required\", etc. These keywords provide rules that JSON documents being validated must adhere to.\n",
       "\n",
-      "- A JSON schema is itself a JSON document that declares constraints on the structure of other JSON documents. It defines things like required properties, data types, string lengths, validation patterns, etc.\n",
+      "- A JSON schema can be used to validate if a JSON document follows the schema, which is useful for data validation and clarifying expectations for JSON data you are consuming or producing. \n",
       "\n",
-      "- Some of the basic keywords and concepts in JSON schema include:\n",
+      "- Some common things JSON schema validation checks:\n",
+      "    - Valid data types (string, number, boolean, etc)\n",
+      "    - Required properties\n",
+      "    - String length limits\n",
+      "    - Value ranges for numbers\n",
+      "    - Expected object structure/hierarchy\n",
+      "    - Referencing definitions for reused JSON structures\n",
       "\n",
-      "- type - specifies the JSON data type such as string, number, object, array, etc.\n",
+      "- There are several JSON schema specification versions (draft-04, draft-06, draft-07, etc). Later drafts add more validation features.\n",
       "\n",
-      "- properties - defines the keys and value types for JSON objects\n",
+      "- JSON schema validators like AJV can programmatically validate JSON against a JSON schema and report any violations. This is useful in API request/response validation.\n",
       "\n",
-      "- required - specifies required properties within an object\n",
+      "- JSON schema definitions can provide useful documentation and clarity around the shape of JSON data being used in applications.\n",
       "\n",
-      "- minimum/maximum - specifies the min and max value of a number\n",
-      "\n",
-      "- minLength/maxLength - specifies the min and max length of a string\n",
-      "\n",
-      "- pattern - defines a regular expression pattern that a string value must match\n",
-      "\n",
-      "- enum - restricts values to a fixed set of options\n",
-      "\n",
-      "- $ref - allows referencing definitions in external schema files\n",
-      "\n",
-      "- Multiple schemas can be combined using keywords like allOf, anyOf, oneOf, not to apply additional constraints.\n",
-      "\n",
-      "- There are several parsers and validator libraries available to validate JSON data against schemas. Popular ones include AJV, jsonschema, and is-my-json-valid.\n",
-      "\n",
-      "- JSON schema is commonly used for configuration files, API definitions, JSON LD data modeling, and anywhere that validation of structured JSON data is needed.\n"
+      "- JSON schema is commonly used for configuration file validation, API request/response validation, documenting APIs that use JSON, and more.\n"
      ]
     }
    ],
@@ -171,53 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "prompt_data = \"\"\"\n",
-    "Human: Can you explain to me your prompting structure?  I see the Human and Assistant designations.  What else can you tell me about how to talk to you?\n",
-    "\n",
-    "Assistant:\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "body = json.dumps({\"prompt\": prompt_data, \"max_tokens_to_sample\": 500})\n",
-    "modelId = \"anthropic.claude-v2\" \n",
-    "accept = \"application/json\"\n",
-    "contentType = \"application/json\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " I don't actually have a complex prompting structure. I'm an AI assistant created by Anthropic to be helpful, harmless, and honest. The \"Human\" and \"Assistant\" labels are there to clarify who is speaking, but you can just speak to me conversationally.\n"
-     ]
-    }
-   ],
-   "source": [
-    "response = bedrock_runtime.invoke_model(\n",
-    "    body=body, modelId=modelId, accept=accept, contentType=contentType\n",
-    ")\n",
-    "response_body = json.loads(response.get(\"body\").read())\n",
-    "\n",
-    "print(response_body.get(\"completion\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,21 +197,23 @@
     "Human: \n",
     "What's the weather like in Glasgow Scotland?\n",
     "Assistant:\n",
+    "{\n",
     "'function_call': {'name': 'get_current_weather',\n",
-    "    'arguments': '{\n",
+    "    'arguments': {\n",
     "        \"location\": \"Glasgow, Scotland\",\n",
     "        \"format\": \"celsius\"\n",
-    "    }'\n",
+    "    }\n",
     "}\n",
     "\n",
     "Human: \n",
     "What's the weather like in Raleigh, NC?\n",
     "Assistant:\n",
+    "{\n",
     "'function_call': {'name': 'get_current_weather',\n",
-    "    'arguments': '{\n",
+    "    'arguments': {\n",
     "        \"location\": \"Raleigh, North Carolina\",\n",
     "        \"format\": \"fahrenheit\"\n",
-    "    }'\n",
+    "    }\n",
     "}\n",
     "###\n",
     "\n",
@@ -278,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -299,11 +247,14 @@
      "text": [
       " Here is the function call to get the current weather in Washington, DC:\n",
       "\n",
-      "'function_call': {'name': 'get_current_weather', \n",
-      "    'arguments': '{\n",
-      "        \"location\": \"Washington, DC\",  \n",
-      "        \"format\": \"fahrenheit\"\n",
-      "    }'\n",
+      "{\n",
+      "  \"function_call\": {\n",
+      "    \"name\": \"get_current_weather\", \n",
+      "    \"arguments\": {\n",
+      "      \"location\": \"Washington, DC\",\n",
+      "      \"format\": \"fahrenheit\"\n",
+      "    }\n",
+      "  }\n",
       "}\n"
      ]
     }
@@ -328,26 +279,165 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from prompt_template import PromptTemplate, load_text_file"
+    "from prompt_template import PromptTemplate, load_text_file\n",
+    "from function_parser import FunctionParser\n",
+    "from linear_trend_model import run_linear_trend_model, FUNCTIONS"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "    #: Test using linear_trend_request_prompt.txt\n",
-    "    linear_trend_prompt = load_text_file('linear_trend_request_prompt.txt')\n",
-    "    linear_trend_prompt_template = PromptTemplate(linear_trend_prompt)\n",
-    "    # print(f\"linear_trend_prompt_template.template: {linear_trend_prompt_template.template}\")\n",
-    "    linear_trend_filled_prompt = linear_trend_prompt_template.fill(functions=\"<< add your function definitions here >>\", \n",
-    "    user_data=\"Here's a story involving some interesting commentary around trends in a market, supported by quantitative data.\")\n",
-    "    print(f\"linear_trend_filled_prompt: {linear_trend_filled_prompt}\")"
+    "#: Here's our prompt that we'll use to drive the language model\n",
+    "linear_trend_prompt = load_text_file('linear_trend_request.prompt')\n",
+    "\n",
+    "#: Here's a mock article excerpt that I generated to showcase this technology.\n",
+    "city_dogs =  load_text_file('city_dogs.txt')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "linear_trend_filled_prompt: Human:\n",
+      "\n",
+      "You will play the role of an expert Data Scientist assistant.  You love linear models, and when you get linear data you make a function call to fit a model to the data. We'll use triple hash ### to open and close subsections of prompt examples.\n",
+      "\n",
+      "We're going to define your character and behaviour in terms of the red, yellow, blue, and green color categories that relate to personality types.\n",
+      "\n",
+      "The color system I'm referring to - it's a way of categorizing personality traits into four colors:\n",
+      "\n",
+      "Red personalities are usually seen as bold, expressive, and competitive. They are motivated by power, stimulation, and winning.\n",
+      "Yellow personalities are sociable, outgoing, and enthusiastic. They tend to be persuasive, verbal, and eager to collaborate.\n",
+      "Green personalities are calm, accommodating, and caring. They value stability, compassion, and building community.\n",
+      "Blue personalities are logical, detail-oriented, and focused. They are quantitative, deliberate, and good at reasoning analytically.\n",
+      "\n",
+      "You are a blue personality no matter what anyone else tries to tell you.\n",
+      "\n",
+      "Your role is to form function arguments based on the specification provide in 'FUNCTIONS'.  Users will send you data that contains prose with certain numeric quantities described in various ways. Do not try to answer questions about the numbers directly, use the provided tools.  The tools are specified using a json schema format, which defines how the arguments to the function are to be formed.  \n",
+      "\n",
+      "Here are the json schema definitions for the functions provided to you.\n",
+      "FUNCTIONS:\n",
+      "###\n",
+      "[{'name': 'run_linear_trend_model', 'description': 'This function runs a linear regression from two lists x,y which contain numeric data.', 'properties': {'x': {'type': 'array', 'items': {'type': 'number'}, 'description': 'List of numeric values representing the independent variable.'}, 'y': {'type': 'array', 'items': {'type': 'number'}, 'description': 'List of numeric values representing the dependent variable.'}}, 'required': ['x', 'y']}]\n",
+      "###\n",
+      "\n",
+      "You will form the arguments to a function that calls a linear regression model.  Try to put time spacial and time orderd variables on the x axis, and things like metrics and KPIs on the vertical axis.  When in doubt, just do the best you can.\n",
+      "\n",
+      "Here's a few example input/output pair:\n",
+      "###\n",
+      "Example 1:\n",
+      "There was once a fox that ran 20 miles carrying 15 pounds.  There was a wold that ran 25 miles carrying 30 pounds.  A turtle loped along slowly, hauling 50 pounds a totla of 45 miles.  A dog happily carried 20 pounds for 20 miles.\n",
+      "\n",
+      "Assistant:\n",
+      "## FUNCTION_CALL ##\n",
+      "{\n",
+      "  \"function\": \"run_linear_trend_model\",\n",
+      "  \"parameters\": {\n",
+      "    \"x\": [20, 25, 45, 20],\n",
+      "    \"y\": [15, 30, 50, 20]\n",
+      "  }\n",
+      "}\n",
+      "\n",
+      "Example 2:\n",
+      "The red box is 20 cubic feet in volume and weighed 20 pounds.  The blue box is 30 cubic feet in volume and weighed 15 pounds.  The purple box was 50 cubic feet in volume and weighed 12 pounds.  A green box was 5 cubic feet in volume and weighed 35 pounds.\n",
+      "\n",
+      "Assistant:\n",
+      "## FUNCTION_CALL ##\n",
+      "{\n",
+      "  \"function\": \"run_linear_trend_model\",\n",
+      "  \"parameters\": {\n",
+      "    \"x\": [20, 30, 50, 5],\n",
+      "    \"y\": [20, 15, 12, 35]\n",
+      "  }\n",
+      "}\n",
+      "###\n",
+      "\n",
+      "\n",
+      "Ok now here's the actual user's data:\n",
+      "###\n",
+      "In the bustling heart of New York City, near the iconic Times Square, a hot dog stand chain named \"CityDogs\" has made a name for itself. Founded in 2005, this humble hot dog stand started on the bustling streets of Manhattan and has since grown, weaving its savory aroma into the fabric of the city. Each of its stands, strategically placed, tells a story of New York's ever-evolving landscape and appetite.\n",
+      "\n",
+      "The original stand, located just 0.5 miles from the center, sits on Broadway Avenue and has the highest revenue of $15,000 a month, thanks to the non-stop flow of tourists and city-dwellers alike. As one moves further away, the second outlet is nestled 1.5 miles out in the charming West Village on Bleecker Street, pulling in a respectable $12,500 monthly. Heading 3 miles out, the third stand resides in the hip enclave of Williamsburg, Brooklyn, on Bedford Avenue, where it enjoys a monthly revenue of $10,000, catering to the young and artsy crowd. At 4.2 miles from the city's core, the fourth stand in Astoria, Queens, on Ditmars Boulevard, manages to net $7,500 per month. Lastly, the fifth and furthest stand, 6 miles away in the scenic Bay Ridge, Brooklyn, on 3rd Avenue, garners $6,000 monthly, serving both locals and those eager for a waterfront view with their meal.\n",
+      "\n",
+      "As \"CityDogs\" continues to flourish, each location becomes a testament to New York's diverse population and their unifying love for a good hot dog. Whether it's the neon lights of Broadway or the quieter streets of Bay Ridge, these stands offer more than just a quick bite. They offer a slice of the city's soul, where distance and revenue intertwine in a dance as dynamic as New York itself.\n",
+      "###\n",
+      "\n",
+      "Now, generate a function call that computes a linear regression, as defined in the FUNCTIONS. \n",
+      "\n",
+      "Assistant:\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#: Establish the Prompt template from the text file.\n",
+    "linear_trend_prompt_template = PromptTemplate(linear_trend_prompt)\n",
+    "\n",
+    "#: Fill the prompt using our \n",
+    "linear_trend_filled_prompt = linear_trend_prompt_template.fill(\n",
+    "    FUNCTIONS=str(FUNCTIONS), \n",
+    "    user_data=city_dogs\n",
+    ")\n",
+    "print(f\"linear_trend_filled_prompt: {linear_trend_filled_prompt}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "body = json.dumps({\"prompt\": linear_trend_filled_prompt, \"max_tokens_to_sample\": 500})\n",
+    "modelId = \"anthropic.claude-v2\" \n",
+    "accept = \"application/json\"\n",
+    "contentType = \"application/json\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Here is the function call to run a linear regression on the data provided:\n",
+      "\n",
+      "```json\n",
+      "{\n",
+      "  \"function\": \"run_linear_trend_model\", \n",
+      "  \"parameters\": {\n",
+      "    \"x\": [0.5, 1.5, 3, 4.2, 6],\n",
+      "    \"y\": [15000, 12500, 10000, 7500, 6000]\n",
+      "  }\n",
+      "}\n",
+      "```\n",
+      "\n",
+      "I extracted the distances in miles from Times Square for each location as the x values, and the monthly revenues in dollars for each location as the y values. This allows fitting a linear regression model to analyze the relationship between distance from Times Square and revenue.\n"
+     ]
+    }
+   ],
+   "source": [
+    "response = bedrock_runtime.invoke_model(\n",
+    "    body=body, modelId=modelId, accept=accept, contentType=contentType\n",
+    ")\n",
+    "response_body = json.loads(response.get(\"body\").read())\n",
+    "\n",
+    "print(response_body.get(\"completion\"))"
    ]
   },
   {
@@ -356,6 +446,15 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parser = FunctionParser()"
+   ]
   },
   {
    "cell_type": "code",
