--- a/function_calling_first_priniciples.ipynb
+++ b/function_calling_first_priniciples.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -128,27 +128,34 @@
      "text": [
       " Here is a summary of what I know about JSON schema:\n",
       "\n",
-      "- JSON schema is a vocabulary that allows you to annotate and validate JSON documents. It defines a JSON-based format to describe the structure of JSON data.\n",
+      "- JSON schema is a specification for defining the structure and validation criteria of JSON data. It provides a schema language for annotating and validating JSON documents.\n",
       "\n",
-      "- JSON schemas are JSON documents themselves that describe JSON data using validation keywords like \"type\", \"properties\", \"required\", etc. These keywords provide rules that JSON documents being validated must adhere to.\n",
+      "- The main purposes of JSON schema are to define contracts for what JSON data is required for a given application, validate that data matches the schema, and facilitate documentation and error handling around structured JSON.\n",
       "\n",
-      "- A JSON schema can be used to validate if a JSON document follows the schema, which is useful for data validation and clarifying expectations for JSON data you are consuming or producing. \n",
+      "- A JSON schema defines constraints on a JSON document such as required properties, data types, string lengths, value ranges, array sizes, and so on. It allows you to specify valid values, invalid values, and default values.\n",
       "\n",
-      "- Some common things JSON schema validation checks:\n",
-      "    - Valid data types (string, number, boolean, etc)\n",
-      "    - Required properties\n",
-      "    - String length limits\n",
-      "    - Value ranges for numbers\n",
-      "    - Expected object structure/hierarchy\n",
-      "    - Referencing definitions for reused JSON structures\n",
+      "- The schema itself is a JSON document that declares and combines constraints that JSON data must adhere to. Some of the keyword constraints include:\n",
       "\n",
-      "- There are several JSON schema specification versions (draft-04, draft-06, draft-07, etc). Later drafts add more validation features.\n",
+      "- type - defines the allowed primitive types such as string, number, boolean, etc.\n",
       "\n",
-      "- JSON schema validators like AJV can programmatically validate JSON against a JSON schema and report any violations. This is useful in API request/response validation.\n",
+      "- properties - lists the properties allowed and their schemas\n",
       "\n",
-      "- JSON schema definitions can provide useful documentation and clarity around the shape of JSON data being used in applications.\n",
+      "- required - lists properties that must be present \n",
+      "- minimum/maximum - specifies numeric range limits\n",
       "\n",
-      "- JSON schema is commonly used for configuration file validation, API request/response validation, documenting APIs that use JSON, and more.\n"
+      "- minLength/maxLength - specifies string length limits \n",
+      "\n",
+      "- pattern - specifies string format using regular expressions\n",
+      "\n",
+      "- enum - restricts values to a fixed set of options\n",
+      "\n",
+      "- multipleOf - restricts numbers to multiples of a given number\n",
+      "\n",
+      "- JSON schema validation is useful for automated testing, validating user input, documentation, and defining domain specific languages. There are libraries for most programming languages to validate JSON against schemas.\n",
+      "\n",
+      "- JSON schema does not rely on a central schema repository. Schemas are treated as regular JSON documents exchanged between systems.\n",
+      "\n",
+      "So in summary, JSON schema allows formally defining JSON data formats and using schemas to validate that data is well-formed against expected requirements.\n"
      ]
     }
    ],
@@ -163,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,16 +245,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " Here is the function call to get the current weather in Washington, DC:\n",
-      "\n",
-      "{\n",
+      " {\n",
       "  \"function_call\": {\n",
       "    \"name\": \"get_current_weather\", \n",
       "    \"arguments\": {\n",
@@ -279,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -341,12 +346,13 @@
       "There was once a fox that ran 20 miles carrying 15 pounds.  There was a wold that ran 25 miles carrying 30 pounds.  A turtle loped along slowly, hauling 50 pounds a totla of 45 miles.  A dog happily carried 20 pounds for 20 miles.\n",
       "\n",
       "Assistant:\n",
-      "## FUNCTION_CALL ##\n",
       "{\n",
-      "  \"function\": \"run_linear_trend_model\",\n",
-      "  \"parameters\": {\n",
-      "    \"x\": [20, 25, 45, 20],\n",
-      "    \"y\": [15, 30, 50, 20]\n",
+      "  \"function_call\": {\n",
+      "    \"name\": \"run_linear_trend_model\", \n",
+      "    \"parameters\": {\n",
+      "      \"x\": [20, 25, 45, 20],\n",
+      "      \"y\": [15, 30, 50, 20]\n",
+      "    }\n",
       "  }\n",
       "}\n",
       "\n",
@@ -354,14 +360,16 @@
       "The red box is 20 cubic feet in volume and weighed 20 pounds.  The blue box is 30 cubic feet in volume and weighed 15 pounds.  The purple box was 50 cubic feet in volume and weighed 12 pounds.  A green box was 5 cubic feet in volume and weighed 35 pounds.\n",
       "\n",
       "Assistant:\n",
-      "## FUNCTION_CALL ##\n",
       "{\n",
-      "  \"function\": \"run_linear_trend_model\",\n",
-      "  \"parameters\": {\n",
-      "    \"x\": [20, 30, 50, 5],\n",
-      "    \"y\": [20, 15, 12, 35]\n",
+      "  \"function_call\": {\n",
+      "    \"name\": \"run_linear_trend_model\", \n",
+      "    \"parameters\": {\n",
+      "      \"x\": [20, 30, 50, 5],\n",
+      "      \"y\": [20, 15, 12, 35]\n",
+      "    }\n",
       "  }\n",
       "}\n",
+      "\n",
       "###\n",
       "\n",
       "\n",
@@ -396,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,26 +416,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " Here is the function call to run a linear regression on the data provided:\n",
-      "\n",
-      "```json\n",
-      "{\n",
-      "  \"function\": \"run_linear_trend_model\", \n",
-      "  \"parameters\": {\n",
-      "    \"x\": [0.5, 1.5, 3, 4.2, 6],\n",
-      "    \"y\": [15000, 12500, 10000, 7500, 6000]\n",
+      " {\n",
+      "  \"function_call\": {\n",
+      "    \"name\": \"run_linear_trend_model\",\n",
+      "    \"parameters\": {\n",
+      "      \"x\": [0.5, 1.5, 3, 4.2, 6], \n",
+      "      \"y\": [15000, 12500, 10000, 7500, 6000]\n",
+      "    }\n",
       "  }\n",
-      "}\n",
-      "```\n",
-      "\n",
-      "I extracted the distances in miles from Times Square for each location as the x values, and the monthly revenues in dollars for each location as the y values. This allows fitting a linear regression model to analyze the relationship between distance from Times Square and revenue.\n"
+      "}\n"
      ]
     }
    ],
@@ -449,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,17 +462,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "parser.parse_output(response)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[20], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m parser\u001b[39m.\u001b[39mexecute_function(\u001b[39mlist\u001b[39;49m(parser\u001b[39m.\u001b[39;49mfunction_queue\u001b[39m.\u001b[39;49mkeys())[\u001b[39m0\u001b[39;49m], {\u001b[39m'\u001b[39m\u001b[39mrun_linear_trend_model\u001b[39m\u001b[39m'\u001b[39m: run_linear_trend_model})\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "parser.execute_function(list(parser.function_queue.keys())[0], {'run_linear_trend_model': run_linear_trend_model})"
+   ]
   },
   {
    "cell_type": "markdown",
