updates and bug fixes to function_parser.py

--- a/function_calling_first_priniciples.ipynb
+++ b/function_calling_first_priniciples.ipynb
@@ -126,36 +126,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " Here is a summary of what I know about JSON schema:\n",
+      " Here is a summary of what I know about JSON Schema:\n",
       "\n",
-      "- JSON schema is a specification for defining the structure and validation criteria of JSON data. It provides a schema language for annotating and validating JSON documents.\n",
+      "- JSON Schema is a specification for defining the structure and validation rules of JSON data. It provides a declarative syntax for describing JSON data formats.\n",
       "\n",
-      "- The main purposes of JSON schema are to define contracts for what JSON data is required for a given application, validate that data matches the schema, and facilitate documentation and error handling around structured JSON.\n",
+      "- The main purposes of JSON Schema are to validate JSON data and provide clear human- and machine-readable documentation.\n",
       "\n",
-      "- A JSON schema defines constraints on a JSON document such as required properties, data types, string lengths, value ranges, array sizes, and so on. It allows you to specify valid values, invalid values, and default values.\n",
+      "- JSON Schema files are themselves written in JSON format and usually have the file extension .schema.json. \n",
       "\n",
-      "- The schema itself is a JSON document that declares and combines constraints that JSON data must adhere to. Some of the keyword constraints include:\n",
+      "- The basic building blocks of JSON Schema are:\n",
       "\n",
-      "- type - defines the allowed primitive types such as string, number, boolean, etc.\n",
+      "    - Types - Specifies the allowed data types of values like string, number, object, array, etc.\n",
       "\n",
-      "- properties - lists the properties allowed and their schemas\n",
+      "    - Properties - Describes the names and allowed values of object properties.\n",
       "\n",
-      "- required - lists properties that must be present \n",
-      "- minimum/maximum - specifies numeric range limits\n",
+      "    - Required - Lists which object properties must be present.\n",
       "\n",
-      "- minLength/maxLength - specifies string length limits \n",
+      "    - Format - Provides validation formats for strings like date, email, etc.\n",
       "\n",
-      "- pattern - specifies string format using regular expressions\n",
+      "    - Enum - Lists acceptable value options for a property.\n",
       "\n",
-      "- enum - restricts values to a fixed set of options\n",
+      "- JSON Schema validation works by comparing a JSON document against the schema and checking if it adheres to the structure, data types, required fields, etc.\n",
       "\n",
-      "- multipleOf - restricts numbers to multiples of a given number\n",
+      "- JSON Schema is standardized by the Internet Engineering Task Force (IETF). The latest version is JSON Schema draft 2019-09 (draft 8).\n",
       "\n",
-      "- JSON schema validation is useful for automated testing, validating user input, documentation, and defining domain specific languages. There are libraries for most programming languages to validate JSON against schemas.\n",
+      "- There are libraries available for most programming languages that implement JSON Schema validation. This allows validating JSON data in code.\n",
       "\n",
-      "- JSON schema does not rely on a central schema repository. Schemas are treated as regular JSON documents exchanged between systems.\n",
+      "- JSON Schema can provide error messages when validation fails, making it easier to identify and troubleshoot invalid data.\n",
       "\n",
-      "So in summary, JSON schema allows formally defining JSON data formats and using schemas to validate that data is well-formed against expected requirements.\n"
+      "- Overall, JSON Schema is very useful for defining strict JSON data models and formats to ensure data quality and consistency.\n"
      ]
     }
    ],
@@ -252,14 +251,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " {\n",
-      "  \"function_call\": {\n",
-      "    \"name\": \"get_current_weather\", \n",
-      "    \"arguments\": {\n",
-      "      \"location\": \"Washington, DC\",\n",
-      "      \"format\": \"fahrenheit\"\n",
+      " Here is the function call to get the current weather in Washington, DC:\n",
+      "\n",
+      "{\n",
+      "'function_call': {\n",
+      "    'name': 'get_current_weather', \n",
+      "    'arguments': {\n",
+      "        \"location\": \"Washington, DC\",\n",
+      "        \"format\": \"fahrenheit\"\n",
       "    }\n",
-      "  }\n",
       "}\n"
      ]
     }
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -339,6 +339,8 @@
       "###\n",
       "\n",
       "You will form the arguments to a function that calls a linear regression model.  Try to put time spacial and time orderd variables on the x axis, and things like metrics and KPIs on the vertical axis.  When in doubt, just do the best you can.\n",
+      "\n",
+      "Pay attention to the number that's attached to the top level name in the json schema.\n",
       "\n",
       "Here's a few example input/output pair:\n",
       "###\n",
@@ -404,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,14 +418,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " {\n",
+      "completion:\n",
+      "  Here is the function call with the extracted data:\n",
+      "\n",
+      "{\n",
       "  \"function_call\": {\n",
       "    \"name\": \"run_linear_trend_model\",\n",
       "    \"parameters\": {\n",
@@ -441,32 +446,71 @@
     ")\n",
     "response_body = json.loads(response.get(\"body\").read())\n",
     "\n",
-    "print(response_body.get(\"completion\"))"
+    "completion = response_body.get(\"completion\")\n",
+    "\n",
+    "print(f\"completion:\\n {completion}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(completion)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "parser = FunctionParser({'run_linear_trend_model': run_linear_trend_model})\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "' Here is the function call with the extracted data:\\n\\n{\\n  \"function_call\": {\\n    \"name\": \"run_linear_trend_model\",\\n    \"parameters\": {\\n      \"x\": [0.5, 1.5, 3, 4.2, 6], \\n      \"y\": [15000, 12500, 10000, 7500, 6000]\\n    }\\n  }\\n}'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "parser = FunctionParser()"
+    "completion"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 19,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "parser.parse_output(response)"
+    "## Parsing an LLM's function call request.\n",
+    "\n",
+    "The LLM is asking you to do something and return the value to it.  Here's where we parse the function parameters and submit the function calls.  The LLM can recieve these as inputs to more downstream processing, or return these results directly.\n",
+    "\n",
+    "In our case, we've got some ordered data that consists of locations and revenue figures.\n",
+    "\n",
+    "It's contained within a mock article about a popular NYC hot dog stand.  This example was contrived to illustrate the point of function calling.  The data was generated by a language model."
    ]
   },
   {
@@ -475,19 +519,27 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[20], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m parser\u001b[39m.\u001b[39mexecute_function(\u001b[39mlist\u001b[39;49m(parser\u001b[39m.\u001b[39;49mfunction_queue\u001b[39m.\u001b[39;49mkeys())[\u001b[39m0\u001b[39;49m], {\u001b[39m'\u001b[39m\u001b[39mrun_linear_trend_model\u001b[39m\u001b[39m'\u001b[39m: run_linear_trend_model})\n",
-      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x :[0.5, 1.5, 3, 4.2, 6]\n",
+      "y :[15000, 12500, 10000, 7500, 6000]\n",
+      "fit linear model in 0.004600048065185547 seconds.\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\"{'slope': -1652.7572364251002, 'intercept': 15224.381998732304, 'r_value': -0.9850169656708015, 'p_value': 0.0021966205939785346, 'std_err': 167.06548200469157}\""
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "parser.execute_function(list(parser.function_queue.keys())[0], {'run_linear_trend_model': run_linear_trend_model})"
+    "parser.parse_and_execute(completion)"
    ]
   },
   {
