end to end example working

--- a/function_calling_first_priniciples.ipynb
+++ b/function_calling_first_priniciples.ipynb
@@ -126,35 +126,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " Here is a summary of what I know about JSON Schema:\n",
+      " Here is a summary of what I know about JSON schema:\n",
       "\n",
-      "- JSON Schema is a specification for defining the structure and validation rules of JSON data. It provides a declarative syntax for describing JSON data formats.\n",
+      "- JSON schema is a specification for defining the structure and validation rules of JSON data. It provides a schema language that allows you to define constraints on what a valid JSON document should look like.\n",
       "\n",
-      "- The main purposes of JSON Schema are to validate JSON data and provide clear human- and machine-readable documentation.\n",
+      "- The main purposes of JSON schema are to validate data, provide documentation of the expected format, and assist in building user interfaces to easily edit JSON data.\n",
       "\n",
-      "- JSON Schema files are themselves written in JSON format and usually have the file extension .schema.json. \n",
+      "- Some key concepts in JSON schema:\n",
       "\n",
-      "- The basic building blocks of JSON Schema are:\n",
+      "- Properties - Used to define keys in a JSON object and their expected types. For example {\"type\": \"string\"}\n",
       "\n",
-      "    - Types - Specifies the allowed data types of values like string, number, object, array, etc.\n",
+      "- Required properties - Which properties must be present for an object to be valid.\n",
       "\n",
-      "    - Properties - Describes the names and allowed values of object properties.\n",
+      "- Data types - JSON schema supports common data types like strings, numbers, booleans, arrays, objects etc.\n",
       "\n",
-      "    - Required - Lists which object properties must be present.\n",
+      "- Format validation - Beyond just data types, formats like date, email, etc. can be validated. \n",
       "\n",
-      "    - Format - Provides validation formats for strings like date, email, etc.\n",
+      "- Enumerated values - The value must match one of a predefined list of allowed values.\n",
       "\n",
-      "    - Enum - Lists acceptable value options for a property.\n",
+      "- Combining schemas - You can combine and reference reusable schemas for more modular and efficient schemas.\n",
       "\n",
-      "- JSON Schema validation works by comparing a JSON document against the schema and checking if it adheres to the structure, data types, required fields, etc.\n",
+      "- Schema validation - There are libraries available to validate JSON data against a JSON schema like AJV.\n",
       "\n",
-      "- JSON Schema is standardized by the Internet Engineering Task Force (IETF). The latest version is JSON Schema draft 2019-09 (draft 8).\n",
+      "- Annotations - Provide additional documentation and semantic meaning on top of just validation rules.\n",
       "\n",
-      "- There are libraries available for most programming languages that implement JSON Schema validation. This allows validating JSON data in code.\n",
+      "- Hyper-schema - Extends JSON schema with links and media types to hyperlink to more detailed API documentation.\n",
       "\n",
-      "- JSON Schema can provide error messages when validation fails, making it easier to identify and troubleshoot invalid data.\n",
-      "\n",
-      "- Overall, JSON Schema is very useful for defining strict JSON data models and formats to ensure data quality and consistency.\n"
+      "So in summary, JSON schema is a powerful way to validate, document and build UIs for JSON data based on a predefined format. It promotes structured, consistent JSON usage.\n"
      ]
     }
    ],
@@ -257,10 +255,13 @@
       "'function_call': {\n",
       "    'name': 'get_current_weather', \n",
       "    'arguments': {\n",
-      "        \"location\": \"Washington, DC\",\n",
-      "        \"format\": \"fahrenheit\"\n",
+      "        'location': 'Washington, DC',\n",
+      "        'format': 'fahrenheit'\n",
       "    }\n",
-      "}\n"
+      "}\n",
+      "}\n",
+      "\n",
+      "I looked up that Washington, DC is located in the United States, so I specified the temperature format as Fahrenheit. The location is passed as the city and state abbreviation.\n"
      ]
     }
    ],
@@ -289,7 +290,7 @@
    "outputs": [],
    "source": [
     "from prompt_template import PromptTemplate, load_text_file\n",
-    "from function_parser import FunctionParser\n",
+    "from function_parser import FunctionParser, extract_json_from_text\n",
     "from linear_trend_model import run_linear_trend_model, FUNCTIONS"
    ]
   },
@@ -426,7 +427,7 @@
      "output_type": "stream",
      "text": [
       "completion:\n",
-      "  Here is the function call with the extracted data:\n",
+      "  Here is the function call with the linear regression data extracted from the prompt:\n",
       "\n",
       "{\n",
       "  \"function_call\": {\n",
@@ -488,7 +489,7 @@
     {
      "data": {
       "text/plain": [
-       "' Here is the function call with the extracted data:\\n\\n{\\n  \"function_call\": {\\n    \"name\": \"run_linear_trend_model\",\\n    \"parameters\": {\\n      \"x\": [0.5, 1.5, 3, 4.2, 6], \\n      \"y\": [15000, 12500, 10000, 7500, 6000]\\n    }\\n  }\\n}'"
+       "' Here is the function call with the linear regression data extracted from the prompt:\\n\\n{\\n  \"function_call\": {\\n    \"name\": \"run_linear_trend_model\",\\n    \"parameters\": {\\n      \"x\": [0.5, 1.5, 3, 4.2, 6], \\n      \"y\": [15000, 12500, 10000, 7500, 6000]\\n    }\\n  }\\n}'"
       ]
      },
      "execution_count": 18,
@@ -515,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -524,13 +525,23 @@
      "text": [
       "x :[0.5, 1.5, 3, 4.2, 6]\n",
       "y :[15000, 12500, 10000, 7500, 6000]\n",
-      "fit linear model in 0.004600048065185547 seconds.\n"
+      "fit linear model in 0.0020210742950439453 seconds.\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "function_parser_result = parser.parse_and_execute(completion)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"{'slope': -1652.7572364251002, 'intercept': 15224.381998732304, 'r_value': -0.9850169656708015, 'p_value': 0.0021966205939785346, 'std_err': 167.06548200469157}\""
+       "str"
       ]
      },
      "execution_count": 20,
@@ -539,8 +550,70 @@
     }
    ],
    "source": [
-    "parser.parse_and_execute(completion)"
+    "type(function_parser_result)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"{'slope': -1652.7572364251002, 'intercept': 15224.381998732304, 'r_value': -0.9850169656708015, 'p_value': 0.0021966205939785346, 'std_err': 167.06548200469157}\""
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "function_parser_result\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import ast"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'slope': -1652.7572364251002,\n",
+       " 'intercept': 15224.381998732304,\n",
+       " 'r_value': -0.9850169656708015,\n",
+       " 'p_value': 0.0021966205939785346,\n",
+       " 'std_err': 167.06548200469157}"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_dict = ast.literal_eval(function_parser_result)\n",
+    "\n",
+    "data_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
